--- a/styles/simple.css
+++ b/styles/simple.css
@@ -9,7 +9,7 @@
   overflow-y: hidden;
 }
 .l5r .sheet-header {
-  height: 100px;
+  /*height: 100px;*/
   overflow: hidden;
   display: flex;
   flex-direction: row;
